refined functionality of the application